--- a/package.json
+++ b/package.json
@@ -5,20 +5,24 @@
   "devDependencies": {
     "babel-loader": "^5.3.2",
     "babel-runtime": "5.8.25",
+    "bower": "^1.8.0",
     "chai": "^3.5.0",
     "chai-dom": "^1.4.0",
+    "gulp": "^3.9.1",
     "imports-loader": "^0.6.4",
     "karma": "^0.13.0",
     "karma-mocha": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
+    "origami-build-tools": "^5.6.1",
     "phantomjs": "^1.9.16",
     "sinon": "^1.17.3",
     "webpack": "^1.12.2"
   },
   "private": true,
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start karma.conf.js"
+    "test": "./node_modules/karma/bin/karma start karma.conf.js",
+    "postinstall" : "bower install && obt build"
   }
 }
